--- a/demo/overlay.html
+++ b/demo/overlay.html
@@ -201,8 +201,10 @@
 
 			<fieldset>
 				<legend>Radial effect</legend>
-				<button data-prop="radial">radial</button>
-				<button data-prop="radialInvert">radialInvert</button>
+				<label class="label">radial
+					<input type="range" min="-1" max="1" step="1" data-setting="radial">
+					<div class="value"></div>
+				</label>
 
 				<label class="label">radius
 					<input type="range" min="0" max="1" step=".05" data-setting="radius">
@@ -281,11 +283,18 @@
 
 			<fieldset>
 				<legend>Peaks</legend>
-				<div class="button-grid">
-					<button data-prop="fadePeaks">fadePeaks</button>
-					<button data-prop="peakLine">peakLine</button>
-					<button data-prop="showPeaks">showPeaks</button>
-				</div>
+				<label class="label"><a href="https://audiomotion.dev/#/?id=peaks" target="_blank">peaks</a>
+					<select data-setting="peaks">
+						<option>off</option>
+						<option>drop</option>
+						<option>fade</option>
+					</select>
+				</label>
+
+				<label class="label"><a href="https://audiomotion.dev/#/?id=peakline" target="_blank">peakLine</a>
+					<input type="range" min="0" max="5" step=".5" data-setting="peakLine">
+					<div class="value"></div>
+				</label>
 			</fieldset>
 		</div>
 	</div>
