--- a/demo/umd.html
+++ b/demo/umd.html
@@ -40,7 +40,7 @@
 		Live stream: <a href="https://federalfm.ufpel.edu.br">Rádio Federal FM</a>.
 	</div>
 
-	<script src="https://unpkg.com/audiomotion-analyzer/dist"></script>
+	<script src="https://unpkg.com/audiomotion-analyzer@alpha/dist"></script>
 	<script>
 		const container      = document.getElementById('container'),
 			  audioContainer = document.getElementById('audio-container'),
