update fluid demo

--- a/demo/fluid.html
+++ b/demo/fluid.html
@@ -302,11 +302,11 @@
 				<label class="label">Enable
 					<input id="customLeds" type="checkbox" data-custom="ledProps">
 				</label>
-				<label class="label"><a href="https://audiomotion.dev/#/?id=setledprops" target="_blank">ledHeight</a>
-					<input id="ledHeight" type="number" min="0" max="50" value="16" data-custom="ledProps">
+				<label class="label"><a href="https://audiomotion.dev/#/?id=setleds" target="_blank">ledHeight</a>
+					<input id="ledHeight" type="number" min="0" max="50" value="3" data-custom="ledProps">
 				</label>
-				<label class="label"><a href="https://audiomotion.dev/#/?id=setledprops" target="_blank">ledGap</a>
-					<input id="gapHeight" type="number" min="0.05" max="50" value="3" step=".05" data-custom="ledProps">
+				<label class="label"><a href="https://audiomotion.dev/#/?id=setleds" target="_blank">ledGap</a>
+					<input id="gapHeight" type="number" min="0" max="50" value="15" data-custom="ledProps">
 				</label>
 			</fieldset>
 
