--- a/demo/umd.html
+++ b/demo/umd.html
@@ -25,7 +25,8 @@
 			</p>
 
 			<p>
-				The module is included with <code>&lt;script src="https://unpkg.com/audiomotion-analyzer/dist"&gt;&lt;/script&gt;</code>
+				The module is included with<br>
+				<code>&lt;script src="https://cdn.jsdelivr.net/npm/audiomotion-analyzer@4"&gt;&lt;/script&gt;</code>
 				<br>and the class is available via <code>AudioMotionAnalyzer</code> global.
 			</p>
 
@@ -40,7 +41,7 @@
 		Live stream: <a href="https://federalfm.ufpel.edu.br">Rádio Federal FM</a>.
 	</div>
 
-	<script src="https://unpkg.com/audiomotion-analyzer@4/dist"></script>
+	<script src="https://cdn.jsdelivr.net/npm/audiomotion-analyzer@4"></script>
 	<script>
 		const container      = document.getElementById('container'),
 			  audioContainer = document.getElementById('audio-container'),
