--- a/demo/umd.html
+++ b/demo/umd.html
@@ -38,7 +38,7 @@
 	<div><button id="btn_destroy">Destroy audioMotion</button></div>
 	<div class="credits">
 		<strong>audioMotion-analyzer</strong> v<span id="version"></span></strong> Copyright &copy; 2018-2026 Henrique Avila Vianna. Source code available on <a href="https://github.com/hvianna/audioMotion-analyzer">GitHub</a>.
-		Live stream: <a href="https://federalfm.ufpel.edu.br">Rádio Federal FM</a>.
+		Live stream: <a href="https://costadelmar-radio.com" target="_blank">Costa del Mar Radio - Zen channel</a>.
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/audiomotion-analyzer@4"></script>
